--- a/01-chap1.Rmd
+++ b/01-chap1.Rmd
@@ -226,7 +226,7 @@ knitr::include_graphics("figures/intro/shrm_model.png")
 
 In this scenario, the advantages of working with a knockout- as compared to a knockdown^[permanent versus transient mutation] mutant are (1) an equal amount of gene expression across all samples (2) no side effects due to injection procedure or solvents in drug treatments (3) the ability to observe the effects of the mutation for very long periods of time.
 
-The strategy for the mutant was to inhibit interaction with SBD-domain proteins. Furthermore, the mutant should be easily genotyped by amplifying a fragment of the gene via PCR and correlating gel electrophoresis band patterns after a restrictive digest. To achieve this, _shroom3_ was targeted using a genome editing system based on the _Transcription activator-like effector nuclease_ (TALEN) [@Bedell2012a]. Following, embryos were screened for mutations resulting in one with a 7 bp deletion in Shroom Domain (SD) 1 and one with an 8 bp deletion in SD 2 that would prevent interaction with Shroom binding domain (SBD) proteins or even lead to a NULL mutation^[mutation that leads to a complete loss of function]. Further analysis showed that the 8 bp mutation in SD2 resulted in (1) a phenotype reminiscent to the MO-injected embryos, (2) a shift in the open reading frame and (3) a deletion of a restriction site for a restion enzyme named NsiI.7p@m
+The strategy for the mutant was to inhibit interaction with SBD-domain proteins. Furthermore, the mutant should be easily genotyped by amplifying a fragment of the gene via PCR and correlating gel electrophoresis band patterns after a restrictive digest. To achieve this, _shroom3_ was targeted using a genome editing system based on the _Transcription activator-like effector nuclease_ (TALEN) [@Bedell2012a]. Following, embryos were screened for mutations resulting in one with a 7 bp deletion in Shroom Domain (SD) 1 and one with an 8 bp deletion in SD 2 that would prevent interaction with Shroom binding domain (SBD) proteins or even lead to a NULL mutation^[mutation that leads to a complete loss of function]. Further analysis showed that the 8 bp mutation in SD2 resulted in (1) a phenotype reminiscent to the MO-injected embryos, (2) a shift in the open reading frame and (3) a deletion of a restriction site for a restriction enzyme named NsiI.
 
 ## Open Questions and Motivation
 
