--- a/06-cv.Rmd
+++ b/06-cv.Rmd
@@ -55,3 +55,4 @@ Advanced courses: Biology, Mathematics
 \noindent {\large \textbf{Publications}} \hrulefill
 
 1. Nollmann, F. I., Heinrich, A. K., Brachmann, A. O., Morisseau, C., Mukherjee, K., Casanova-Torres, M., Strobl, F., Kleinhans, D., Kinski, S., Schultz, K., *et al.* (2015). [**A Photorhabdus Natural Product Inhibits Insect Juvenile Hormone Epoxide Hydrolase.**](https://onlinelibrary.wiley.com/doi/abs/10.1002/cbic.201402650) ChemBioChem 16, 766-771.
+2. Kleinhans, D. S., & Lecaudey, V. (2019). [**Standardized mounting method of ( zebrafish ) embryos using a 3D-printed stamp for high-content , semi-automated confocal imaging.**](https://bmcbiotechnol.biomedcentral.com/track/pdf/10.1186/s12896-019-0558-y) 1–10.
